# testTask

./: README.md
client1/: CMakeLists.txt
client1/src/: main.cpp
client2/: CMakeLists.txt
client2/src/: main.cpp
client3/: CMakeLists.txt
client3/src/: main.cpp
